
Tue Jul 15 20:31:23 CEST 2003
(Kim)

Fix broken configure/install.

-------------------------------------------------------------------------------

Sun Jul 20 20:16:06 CEST 2003
(Kim)

Fix min/maximise bugs/inconsistencies, simplify code.
Some xinerama code cleanups.

Fix de-iconfy of windows not entirely on-screen.

-------------------------------------------------------------------------------

Wed Jul 23 20:03:28 CEST 2003
(Kim)

Fix "premature" commit of fix to deiconification problem :)

-------------------------------------------------------------------------------

Sun Aug  3 23:16:17 CEST 2003
(Kim)

Removed most URL's relating to required libraries.
Patch from Onur Kucuk <onur@kablonet.com.tr> + additional removals.

Added a new menu generation script that should find GNOME2/KDE3 apps too.

Removed obsolete TODO.
Added BUGS.

-------------------------------------------------------------------------------

Fri Aug  8 20:36:01 CEST 2003
(Kim)

BUGS: Added window list bug.

Minor bug fixes to maximise code.
Spanning Xinerama screens now requires "xinerama".

-------------------------------------------------------------------------------

Sun Aug 10 17:26:18 CEST 2003
(Kim)

Fixed focus list not always being closed when it should be.

-------------------------------------------------------------------------------

Thu Aug 14 23:56:03 CEST 2003
(Kim)

Polish config files collected into config.pl (like the Japanese ones).
Removed various config file variants (*.{rh,kde,nokde,gmc,nogmc}.cfg).
Removed "./" from config.ja (avoid ignoring error in "make distckeck").

Added BUGS to RPM docs.

-------------------------------------------------------------------------------

Sun Aug 17 12:29:42 CEST 2003
(Kim)

Introduced IPC command abbreviations.

Added possibility to use readline in eesh (--with-readline, default off).

Do config file replacements atomically.
Do save snaps on exit.

GNOME(1) hint support now disabled by default.